Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27336

Drag and Drop has broken in Qt 5 with native child widgets

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 5.0.0 Beta 1
    • GUI: Drag and Drop
    • None
    • Windows 7 x64
      vs2010 sp1
    • 0a7e8350ae0a461d90619382c61e933eb0494be9

    Description

      Drag and drop for a widget which has native child widgets has broken in Qt5.
      Run the attached sample program, press mouse button in any non-child widget area in the top level widget will start drag, move the cursor to the push button or the GL widget you will see drop is forbidden, this behavoiur is not correct.

      Attachments

        1. testDnd.rar
          5 kB
          liang jian
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            jianliang79 liang jian
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes